fixed event visibility and broadcast events
fixed support for events flagged for all, to show up in all connected
clients and push changes to all clients
fixed visibility for ShiftType.Training events

--- a/css/month/eventTypes.css
+++ b/css/month/eventTypes.css
@@ -13,6 +13,7 @@
 .Training {
     background-color:#ffe033;
     border-color:#fff043;
+    color:black;
 }
 .Meeting {
     background-color:#5802ad;
